# seleksi-sister

./: README.md
chess/: README.md  main.py
chess/data/: __init__.py  bishop.py  board.py  king.py  knight.py  pawn.py  piece.py  queen.py  rook.py
fotosop/: CMakeLists.txt  README.md  main.cu
fotosop/lib/: osdialog.c  osdialog.h  osdialog_gtk2.c  osdialog_gtk3.c
fotosop/src/: blur.cu  blur.cuh  converter.cu  converter.cuh  datatypes.cuh  datatypes.h  loader.cpp  loader.cu  loader.cuh  loader.h  sobel.cu  sobel.cuh
fotosop/src/converter/: grayscale.cu
fotosop/src/loader/: image.cu
klak-klak/: README.md  main.zig
linuwux/: README.md
restore-grub/: README.md
sister-js/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
sister-js/src/: index.ts
sister-js/src/controller/: file.ts  hello.ts  todo.ts
sister-js/src/database/: index.ts
sister-js/src/http/: exception.ts  parser.ts  request.ts  response.ts  server.ts  types.ts
sister-js/src/http/handler/: internal-error.ts  not-found.ts
sister-js/src/http/parser/: base.ts  multipart.ts
sister-js/src/json/: exception.ts  parser.ts  stringifier.ts
sister-js/src/middleware/: bad-request.ts  internal-error.ts  not-found.ts  request-logger.ts
sister-js/test/: file.http  hello.http  todo.http
